# sarc_environment

./: CMakeLists.txt  README.md  package.xml
launch/: sarc.launch  sarc_low_map.launch  sarc_map.launch
models/MRS_tree_simple/: model.config  model.sdf
models/MRS_tree_simple/scripts/: tree_simple.material
models/MRS_tree_simples_close/: model.sdf
models/MRS_tree_simples_close/scripts/: tree_simple.material
models/MRS_tree_simples_fire/: model.sdf
models/MRS_tree_simples_fire/scripts/: tree_simple.material
models/SARckc/: model.sdf
models/SARckc_floor/: model.config  model.sdf
scripts/: fall.py  sarc_low_map.py  sarc_map.py
start/: .tmuxinator.yml  session.yml
start/pos/: pos1.yaml
starts/start_low_map/: .tmuxinator.yml  session.yml
starts/start_low_map/pos/: pos1.yaml  pos2.yaml  pos3.yaml  pos4.yaml  pos5.yaml
starts/start_map/: .tmuxinator.yml  session.yml
starts/start_map/pos/: pos1.yaml  pos2.yaml  pos3.yaml  pos4.yaml  pos5.yaml
worlds/: SARC.world
