<?xml version="1.0"?>
<package format="2">
  <name>sarc_environment</name>
  <version>0.1.2</version>
  <description> Environment to SARC competition
  </description>
  <maintainer email="jorge.luiz.henri@hotmail.com">Jorge Luiz Henriques</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/world_models:${prefix}/models" />
  </export>
</package>
